2024-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date):  Release 1.87.0-1

2024-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/boost/*: Upgraded to Boost 1.87.0, as usual with
	requested patch to comment out 'diagnostic ignored' for CRAN
	* local/patches/bh_1.87.0-0.patch: Added new single patch file

	* local/scripts/CreateBoost.sh: Update for 1.87.0, no additions

2024-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch two more some URLs from http to https

2024-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* DESCRIPTION (Authors@R): Added

2024-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2024-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date):  Release 1.84.0-0

2023-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date):  Pre-Release 1.84.0-0

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2023-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/boost/*: Upgraded to Boost 1.84, as usual with two
	patch sets from CRAN demands on file path length and diagnostics
	* local/patches/bh_1.84.0-0.diagnostics-two.patch: Added

	* local/scripts/CreateBoost.sh: Update for 1.84.0, added qvm

2023-01-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 1.81.0-1

	* inst/include/boost/math/tools/config.hpp: Comment-out 'warning'
	message as CRAN Policy would prefer not to see these
	* inst/include/boost/multiprecision/detail/standalone_config.hpp: Idem
	* inst/include/boost/spirit/home/x3.hpp: Idem (for four lines)

2022-12-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/boost/core/snprintf.hpp: Added
	* .../lexical_cast/detail/converter_lexical_streams.hpp: Used here